--- a/css/index.css
+++ b/css/index.css
@@ -20,13 +20,17 @@
     scroll-behavior: smooth;
 }
 
-a:visited,a:link,a:focus{
+a:visited,
+a:link,
+a:focus {
     color: var(--white);
 }
 
 body {
+    position: relative;
     font-family: 'Roboto', sans-serif;
     color: var(--black);
+    background-color: var(--white);
 }
 
 nav {
@@ -57,7 +61,7 @@ nav ul li a {
 
 nav li a:hover {
     color: whitesmoke;
-    text-shadow: 0px 0px 0px var(--white);
+    text-shadow: 0px -1.5px 3px var(--white);
 }
 
 .header-img {
@@ -123,48 +127,37 @@ main h2 {
     text-align: center;
 }
 
-.about-us {
+[data-info] {
     position: relative;
     height: 350px;
     margin: 50px 0;
     background-attachment: fixed;
     background-position: center;
+    background-size: cover;
     border-bottom-right-radius: 50px;
     border-top-left-radius: 50px;
     overflow: hidden;
+    box-shadow: 10px 10px 10px var(--black);
 }
 
-.about-us:nth-of-type(1) {
-    background-image: url(../img/forest1.jpg);
-}
-
-.about-us:nth-of-type(2) {
-    background-image: url(../img/forest2.jpg);
-}
-
-.about-us:nth-of-type(3) {
-    background-image: url(../img/forest3.jpg);
-}
-
-.about-us:nth-of-type(4) {
-    background-image: url(../img/forest4.jpg);
-}
-
-main{
-    margin-bottom: 80px;
-}
-
-.about-us::after {
-    content: '';
+[data-info]::before{
+    content: attr(data-info);
     position: absolute;
-    bottom: 0;
+    left: 0%;
+    top: 0%;
     width: 100%;
-    height: 35%;
+    text-align: center;
+    color: var(--white);
+    font-size: 1.5rem;
+    font-weight: bold;
+    padding: 5px;
     background-color: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    transition: opacity .3s linear;
 }
 
-.about-us:hover{
-
+[data-info]:hover::before {
+    opacity: 1;
 }
 
 .about-us-text {
@@ -176,18 +169,67 @@ main{
     z-index: 1;
 }
 
+[data-info]:nth-of-type(1) {
+    background-image: url(../img/forest1.jpg);
+}
+
+[data-info]:nth-of-type(2) {
+    background-image: url(../img/forest2.jpg);
+}
+
+[data-info]:nth-of-type(3) {
+    background-image: url(../img/forest3.jpg);
+}
+
+[data-info]:nth-of-type(4) {
+    background-image: url(../img/forest4.jpg);
+}
+
+main {
+    margin-bottom: 80px;
+}
+
+[data-info]::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 30%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
 .about-us-text h3 {
     text-transform: uppercase;
     margin-bottom: 5px;
 }
 
+main ul {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
 main ul li {
-    text-align: center;
-    text-decoration: underline;
+    font-size: 2rem;
+    text-align: left;
     font-weight: bold;
     font-style: italic;
-    list-style: none;
+    font-variant: small-caps;
+    word-spacing: 4px;
     margin: 20px 10px;
+    list-style: none;
+}
+
+main ul li::before {
+    /* content: "\1F333"; */
+    content: "";
+    background-image: url("../img/tree.png");
+    background-size: cover;
+    display: inline-block;
+    height: 24px;
+    width: 24px;
+    margin-right: 5px;
+    font-size: 24px;
 }
 
 .container-contact {
@@ -203,47 +245,52 @@ main ul li {
     margin-right: 15px;
 }
 
-.fa-bars{
+.fa-bars {
     display: none;
 }
 
-@media (max-width: 991.98px) { 
-    nav ul li a{
+@media (max-width: 991.98px) {
+    nav ul li a {
         font-size: 0.9rem;
     }
 }
 
-@media (max-width: 767.98px) { 
-    nav ul li a{
+@media (max-width: 767.98px) {
+    nav ul li a {
         padding: 0 25px;
     }
-    .about-us{
+
+    .about-us {
         font-size: 0.9rem;
     }
+
     .about-us::after {
-        height: 50%;
+        height: 45%;
     }
 }
 
-@media (max-width: 575.98px) { 
-    nav ul{
+@media (max-width: 575.98px) {
+    nav ul {
         display: none;
     }
-    .fa-bars{
+
+    .fa-bars {
         line-height: 50px;
         font-size: 2rem;
         display: block;
     }
-    .about-us{
+
+    .about-us {
         font-size: 0.8rem;
     }
+
     .about-us::after {
-        height: 40%;
+        height: 35%;
     }
 }
 
-@media (max-width: 280.98px) { 
+@media (max-width: 280.98px) {
     .about-us::after {
-        height: 60%;
+        height: 55%;
     }
 }
