--- a/css/index.css
+++ b/css/index.css
@@ -134,6 +134,7 @@ main h2 {
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
+    background-repeat: no-repeat;
     border-bottom-right-radius: 50px;
     border-top-left-radius: 50px;
     overflow: hidden;
