--- a/css/index.css
+++ b/css/index.css
@@ -186,10 +186,6 @@ main h2 {
     background-image: url(../img/forest4.jpg);
 }
 
-main {
-    margin-bottom: 80px;
-}
-
 [data-info]::after {
     content: '';
     position: absolute;
@@ -208,6 +204,7 @@ main ul {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
+    height: 175%;
 }
 
 main ul li {
@@ -219,6 +216,10 @@ main ul li {
     word-spacing: 4px;
     margin: 20px 10px;
     list-style: none;
+}
+
+main{
+    margin-bottom: 80px;
 }
 
 main ul li::before {
